# mark3d

./: .gitignore  README.md  check_migration.sh  docker-compose.dev.yml  docker-compose.yml  filemarket.conf  filemarket.dev.conf  is_changed.sh  migrate.Dockerfile  nginx.conf  package.json  tsconfig.json
.github/workflows/: dev.yml  main.yml
autoseller/: .env  .env.template  .gitignore  Dockerfile  Makefile  go.mod  go.sum
backend/: .env  Cargo.toml  Dockerfile  Makefile
backend/src/: helpers.rs  main.rs  structs.rs
frontend/: .env  .eslintrc.cjs  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  prepare-abi.mjs  vite.config.ts
frontend/src/: App.tsx  lighthouse.d.ts  main.tsx  providers.tsx  types.d.ts
go-client-issue/: go.mod  go.sum  main.go
healthcheck-tg/: .env.template  Dockerfile  README.md  config.go  go.mod  go.sum  main.go  run.sh
indexer/: .env  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  run.sh  swagger.local.yaml  swagger.yaml
indexer/configs/: dev.json  local.json  main.json
indexer/migrations/: 20221112185716_init.sql  20221112185717_keys.sql  20230412133337_number.sql  20230419200001_metadata.sql  20230501224314_mint_transaction.sql  20230502210950_metadata_trait_count.sql  20230516191756_exchangev2.sql  20230516191756_exchangev2_orders.sql  20230602125947_whitelist.sql  20230620162658_block_number.sql  (+1 more)
public/: verifyforzoho.html
sol-contracts/: .gitignore  EncryptedFileTokenSpec.md  HiddenFilesSpec.md  README.md  hardhat.config.ts  package.json  tsconfig.json
uploader/: go.mod  go.sum
(+422 files in other folders)
