[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = "1.21.2"
dotenvy = "0.15.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
hex = "0.4.3"
