[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3", features = ["default"] }
tokio = "1.21.2"
redis = { version = "0.22.1", features = ["tokio-comp"] }
dotenvy = "0.15.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
sha2 = "0.10.6"
pgp = "0.9.0"
aes = "0.8.2"
cbc = "0.1.2"
generic-array = "0.14.6"
secp256k1 = "0.21.3"
reqwest = "0.11.12"
log = "0.4.6"
env_logger = "0.10.0"